# miappe-api-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  codecov.yml  db.sqlite  driver.py  package-lock.json  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: analysis_ci.yaml  ci.yaml  ci.yml  github-actions.yml  test_ci.yaml  test_ci.yml  validate_ci.yaml  validate_ci.yml
assets/MIAPPE+_Architecture/: MIAPPE+v0.0.1_Schema_TPA_Example.xlsx
miappe/: app.py  helpers.py
miappe/cli/: main.py
miappe/metadata/: convert.py  helpers.py  io.py  validator.py
miappe/metadata/isatools/: utils.py
miappe/metadata/isatools/create/: assay_templates.py  connectors.py  constants.py  errors.py  model.py
miappe/metadata/isatools/graphQL/: custom_scalars.py  inputs.py  models.py  unions.py
miappe/metadata/isatools/graphQL/queries/: introspection.gql
miappe/metadata/isatools/graphQL/utils/: search.py
miappe/metadata/isatools/io/: isatab_parser.py
miappe/metadata/isatools/isatab/: __init__.py  defaults.py  deprecated.py  graph.py  utils.py
miappe/metadata/isatools/isatab/dump/: __init__.py  core.py  utils.py  write.py
miappe/metadata/isatools/isatab/load/: ProcessSequenceFactory.py  __init__.py  core.py  read.py
miappe/metadata/isatools/isatab/validate/: __init__.py  core.py  store.py
miappe/metadata/isatools/isatab/validate/rules/: __init__.py  core.py  defaults.py  rules_00xx.py  rules_10xx.py  rules_30xx.py  rules_40xx.py  rules_50xx.py
miappe/metadata/isatools/model/: __init__.py  assay.py  characteristic.py  comments.py  context.py  datafile.py  factor_value.py  identifiable.py  investigation.py  loader_indexes.py  logger.py  material.py  mixins.py  ontology_annotation.py  ontology_source.py  parameter_value.py  patchnote.txt  person.py  process.py  process_sequence.py  protocol.py  protocol_component.py  protocol_parameter.py  publication.py  sample.py  source.py  study.py  utils.py
miappe/metadata/isatools/resources/config/yaml/: assay-options.yml
miappe/metadata/resource/model/: Biological Material_model.tsv  Data File_model.tsv  MIAPPE_Checklist-Data-Model-v1.1.tsv  Observation Unit_model.tsv  Person_model.tsv  Sample_model.tsv  Study_model.tsv  generate_resource.py
miappe/metadata/resource/template/: MIAPPEv1.1_training_spreadsheet.xlsx
miappe/model/: __init__.py  base.py  biological_material.py  data_file.py  device.py  environment.py  event.py  experiment.py  experimental_factor.py  facility.py  institution.py  investigation.py  method.py  observation_unit.py  observed_variable.py  sample.py  staff.py  study.py  unit.py  variable.py  vocabulary.py
miappe/router/: DTO.py  __init__.py  base.py  device.py  method.py  unit.py  variable.py  vocabulary.py
miappe/router/utils/: CRUD.py  DTO.py
src/: app.py  helpers.py  setup.py
src/metadata/: helpers.py  io.py  validator.py
src/metadata/resource/model/: Biological Material_model.tsv  Data File_model.tsv  Environment_model.tsv  Event_model.tsv  Experimental Factor_model.tsv  Investigation_model.tsv  MIAPPE_Checklist-Data-Model-v1.1.tsv  Observation Unit_model.tsv  Observed Variable_model.tsv  Person_model.tsv  Sample_model.tsv  Study_model.tsv  metadata.yaml
src/model/: __init__.py  base.py  biological_material.py  data_file.py  device.py  environment.py  event.py  experiment.py  experimental_factor.py  facility.py  institution.py  investigation.py  method.py  observation_unit.py  observed_variable.py  sample.py  schema.py  staff.py  study.py  unit.py  variable.py  vocabulary.py
src/router/: __init__.py  base.py  biological_material.py  data_file.py  device.py  environment.py  event.py  experiment.py  experimental_factor.py  facility.py  institution.py  investigation.py  method.py  observation_unit.py  observed_variable.py  sample.py  sparql.py  staff.py  study.py  unit.py  variable.py  vocabulary.py
src/router/utils/: dto.py
src/services/: sparql.py
tests/: conftest.py  helpers.py  test_feature.py
tests/metadata/: __init__.py  conftest.py  test_helpers.py  test_io.py  test_validator.py
tests/metadata/data/: MIAPPE_UOA_Test.xlsx
tests/router/: conftest.py  test_data_files.py  test_device.py  test_institution.py  test_investigation.py  test_method.py  test_staff.py  test_study.py  test_unit.py  test_variable.py  test_vocabulary.py
tests/router/biological_material/: fixture.py  test_biological_material.py
tests/router/data_file/: fixture.py  test_data_file.py
tests/router/device/: fixture.py  test_device.py
tests/router/environment/: fixture.py  test_environment.py
tests/router/event/: fixture.py  test_event.py
tests/router/experiment/: fixture.py  test_experiment.py
tests/router/experimental_factor/: fixture.py  test_experimental_factor.py
tests/router/facility/: fixture.py  test_facility.py
tests/router/institution/: fixture.py  test_institution.py
tests/router/investigation/: fixture.py  test_investigation.py
tests/router/method/: fixture.py  test_method.py
tests/router/observation_unit/: fixture.py  test_observation_unit.py
tests/router/observed_variable/: fixture.py  test_observed_variable.py
tests/router/sample/: fixture.py  test_sample.py
tests/router/staff/: fixture.py  test_staff.py
tests/router/study/: fixture.py  test_study.py
tests/router/unit/: fixture.py  test_unit.py
