[tool.poetry]
name = "miappe-api"
version = "0.1.0"
description = "Python API for MIAPPE metadata dataset"
authors = ["hoangson <lehoangsonsg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["standard"], version = "^2.7.0"}
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.28"
advanced-alchemy = "^0.7.4"
anyio = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5.post1"


[tool.poetry.group.analysis.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@(abc\\.)?abstractmethod",
    "def __getattr__",
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 88
src = ["miappe"]
target-version = "py311"


